--- a/TopicPredicton.ipynb
+++ b/TopicPredicton.ipynb
@@ -43,9 +43,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10000, 1)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -67,44 +74,44 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Article</th>\n",
+       "      <th>text</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>In the Washington of 2016, even when the polic...</td>\n",
+       "      <td>Angela Merkel ayer en Berlin tras la cumbre te...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Donald Trump has used Twitter  —   his prefe...</td>\n",
+       "      <td>\\n\\n\\n\\n\\nEnrique Quemada Clariana\\nFusiones y...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Donald Trump is unabashedly praising Russian...</td>\n",
+       "      <td>¿Cuántas veces no ha querido ser su propio jef...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Updated at 2:50 p. m. ET, Russian President Vl...</td>\n",
+       "      <td>El ministro de Sanidad, Salvador Illa, momento...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>From photography, illustration and video, to d...</td>\n",
+       "      <td>El Pleno del Congreso ha aprobado el proyecto ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             Article\n",
-       "0  In the Washington of 2016, even when the polic...\n",
-       "1    Donald Trump has used Twitter  —   his prefe...\n",
-       "2    Donald Trump is unabashedly praising Russian...\n",
-       "3  Updated at 2:50 p. m. ET, Russian President Vl...\n",
-       "4  From photography, illustration and video, to d..."
+       "                                                text\n",
+       "0  Angela Merkel ayer en Berlin tras la cumbre te...\n",
+       "1  \\n\\n\\n\\n\\nEnrique Quemada Clariana\\nFusiones y...\n",
+       "2  ¿Cuántas veces no ha querido ser su propio jef...\n",
+       "3  El ministro de Sanidad, Salvador Illa, momento...\n",
+       "4  El Pleno del Congreso ha aprobado el proyecto ..."
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,8 +119,12 @@
    "source": [
     "# Archivo npr.csv es para hacer pruebas\n",
     "\n",
-    "df = pd.read_csv('npr.csv')\n",
-    "df.head()"
+    "df = pd.read_csv('noticias-economicas-sample.csv')\n",
+    "\n",
+    "textoPrueba = df[['text']]\n",
+    "\n",
+    "print(textoPrueba.shape)\n",
+    "textoPrueba.head()"
    ]
   },
   {
