--- a/TopicPredicton.ipynb
+++ b/TopicPredicton.ipynb
@@ -26,11 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import re # expresiones regulares (regex)\n",
+    "from nltk.corpus import stopwords"
    ]
   },
   {
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -98,6 +100,26 @@
        "      <th>4</th>\n",
        "      <td>El Pleno del Congreso ha aprobado el proyecto ...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Vacunarse de la gripe para aliviar los hospita...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Elon Musk, fundador de Tesla. EFE\\n\\nLa compañ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Una usuaria consulta la aplicación de banca ar...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Las consecuencias socioeconómicas de la pandem...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>La aerolínea Ryanair anunció este viernes que ...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -108,10 +130,15 @@
        "1  \\n\\n\\n\\n\\nEnrique Quemada Clariana\\nFusiones y...\n",
        "2  ¿Cuántas veces no ha querido ser su propio jef...\n",
        "3  El ministro de Sanidad, Salvador Illa, momento...\n",
-       "4  El Pleno del Congreso ha aprobado el proyecto ..."
+       "4  El Pleno del Congreso ha aprobado el proyecto ...\n",
+       "5  Vacunarse de la gripe para aliviar los hospita...\n",
+       "6  Elon Musk, fundador de Tesla. EFE\\n\\nLa compañ...\n",
+       "7  Una usuaria consulta la aplicación de banca ar...\n",
+       "8  Las consecuencias socioeconómicas de la pandem...\n",
+       "9  La aerolínea Ryanair anunció este viernes que ..."
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +151,125 @@
     "textoPrueba = df[['text']]\n",
     "\n",
     "print(textoPrueba.shape)\n",
-    "textoPrueba.head()"
+    "textoPrueba.head(10)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Normalizamos el texto, quitamos mayúsculas y signos de puntuación"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# FUNCIÓN PARA NORMALIZAR EL TEXTO\n",
+    "def noPuntuacion(text): return re.findall(r'[a-zA-ZñÑáéíóúÁÉÍÓÚüÜ]+', text.lower())\n",
+    "# Elimina signos de puntuación y solo deja letras en minúsculas. No elimina tildes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>texto normalizado</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>angela merkel ayer en berlin tras la cumbre te...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>enrique quemada clariana fusiones y adquisicio...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cuántas veces no ha querido ser su propio jefe...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>el ministro de sanidad salvador illa momentos ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>el pleno del congreso ha aprobado el proyecto ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>vacunarse de la gripe para aliviar los hospita...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>elon musk fundador de tesla efe la compañía in...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>una usuaria consulta la aplicación de banca ar...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>las consecuencias socioeconómicas de la pandem...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>la aerolínea ryanair anunció este viernes que ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   texto normalizado\n",
+       "0  angela merkel ayer en berlin tras la cumbre te...\n",
+       "1  enrique quemada clariana fusiones y adquisicio...\n",
+       "2  cuántas veces no ha querido ser su propio jefe...\n",
+       "3  el ministro de sanidad salvador illa momentos ...\n",
+       "4  el pleno del congreso ha aprobado el proyecto ...\n",
+       "5  vacunarse de la gripe para aliviar los hospita...\n",
+       "6  elon musk fundador de tesla efe la compañía in...\n",
+       "7  una usuaria consulta la aplicación de banca ar...\n",
+       "8  las consecuencias socioeconómicas de la pandem...\n",
+       "9  la aerolínea ryanair anunció este viernes que ..."
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "textoPruebaNorm = pd.DataFrame(textoPrueba[\"text\"].apply(noPuntuacion).apply(lambda x: \" \".join(x)))\n",
+    "textoPruebaNorm.columns = [\"texto normalizado\"]\n",
+    "textoPruebaNorm.head(10)"
    ]
   },
   {
