--- a/TopicPredicton.ipynb
+++ b/TopicPredicton.ipynb
@@ -26,13 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import re # expresiones regulares (regex)\n",
-    "from nltk.corpus import stopwords"
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem import SnowballStemmer"
    ]
   },
   {
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +139,7 @@
        "9  La aerolínea Ryanair anunció este viernes que ..."
       ]
      },
-     "execution_count": 22,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +149,8 @@
     "\n",
     "df = pd.read_csv('noticias-economicas-sample.csv')\n",
     "\n",
-    "textoPrueba = df[['text']]\n",
+    "textoPrueba = df[['text']].copy() # Pongo .copy() porque cuando intentas \n",
+    "                                  # quitar las stopwords sale un warning.\n",
     "\n",
     "print(textoPrueba.shape)\n",
     "textoPrueba.head(10)"
@@ -159,23 +161,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Normalizamos el texto, quitamos mayúsculas y signos de puntuación"
+    "Eliminamos stopwords"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# FUNCIÓN PARA NORMALIZAR EL TEXTO\n",
-    "def noPuntuacion(text): return re.findall(r'[a-zA-ZñÑáéíóúÁÉÍÓÚüÜ]+', text.lower())\n",
-    "# Elimina signos de puntuación y solo deja letras en minúsculas. No elimina tildes."
+    "# Función para eliminar stopwords en español\n",
+    "\n",
+    "def noStopwords(text):\n",
+    "    \n",
+    "    sw_es = set(stopwords.words('spanish'))\n",
+    "\n",
+    "    text = ' '.join([word for word in text.split() if word.lower() not in sw_es])\n",
+    "    \n",
+    "    return text\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -199,77 +207,239 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>texto normalizado</th>\n",
+       "      <th>text</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>angela merkel ayer en berlin tras la cumbre te...</td>\n",
+       "      <td>Angela Merkel ayer Berlin tras cumbre telemáti...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>enrique quemada clariana fusiones y adquisicio...</td>\n",
+       "      <td>Enrique Quemada Clariana Fusiones adquisicione...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>cuántas veces no ha querido ser su propio jefe...</td>\n",
+       "      <td>¿Cuántas veces querido ser propio jefe? ¿Cuánt...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>el ministro de sanidad salvador illa momentos ...</td>\n",
+       "      <td>ministro Sanidad, Salvador Illa, momentos rued...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>el pleno del congreso ha aprobado el proyecto ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>vacunarse de la gripe para aliviar los hospita...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>elon musk fundador de tesla efe la compañía in...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>una usuaria consulta la aplicación de banca ar...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>las consecuencias socioeconómicas de la pandem...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>la aerolínea ryanair anunció este viernes que ...</td>\n",
+       "      <td>Pleno Congreso aprobado proyecto Presupuestos ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                   texto normalizado\n",
-       "0  angela merkel ayer en berlin tras la cumbre te...\n",
-       "1  enrique quemada clariana fusiones y adquisicio...\n",
-       "2  cuántas veces no ha querido ser su propio jefe...\n",
-       "3  el ministro de sanidad salvador illa momentos ...\n",
-       "4  el pleno del congreso ha aprobado el proyecto ...\n",
-       "5  vacunarse de la gripe para aliviar los hospita...\n",
-       "6  elon musk fundador de tesla efe la compañía in...\n",
-       "7  una usuaria consulta la aplicación de banca ar...\n",
-       "8  las consecuencias socioeconómicas de la pandem...\n",
-       "9  la aerolínea ryanair anunció este viernes que ..."
+       "                                                text\n",
+       "0  Angela Merkel ayer Berlin tras cumbre telemáti...\n",
+       "1  Enrique Quemada Clariana Fusiones adquisicione...\n",
+       "2  ¿Cuántas veces querido ser propio jefe? ¿Cuánt...\n",
+       "3  ministro Sanidad, Salvador Illa, momentos rued...\n",
+       "4  Pleno Congreso aprobado proyecto Presupuestos ..."
       ]
      },
-     "execution_count": 30,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "textoPruebaNorm = pd.DataFrame(textoPrueba[\"text\"].apply(noPuntuacion).apply(lambda x: \" \".join(x)))\n",
-    "textoPruebaNorm.columns = [\"texto normalizado\"]\n",
-    "textoPruebaNorm.head(10)"
+    "textoPrueba['text'] = textoPrueba['text'].apply(noStopwords)\n",
+    "textoPrueba.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Normalizamos el texto, quitamos mayúsculas y signos de puntuación"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Función para normalizar el texto\n",
+    "\n",
+    "def noPuntuacion(text): return re.findall(r'[a-zA-ZñÑ]+', text.lower()) # áéíóúÁÉÍÓÚüÜ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>angela merkel ayer berlin tras cumbre telem ti...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>enrique quemada clariana fusiones adquisicione...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cu ntas veces querido ser propio jefe cu ntas ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ministro sanidad salvador illa momentos rueda ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>pleno congreso aprobado proyecto presupuestos ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text\n",
+       "0  angela merkel ayer berlin tras cumbre telem ti...\n",
+       "1  enrique quemada clariana fusiones adquisicione...\n",
+       "2  cu ntas veces querido ser propio jefe cu ntas ...\n",
+       "3  ministro sanidad salvador illa momentos rueda ...\n",
+       "4  pleno congreso aprobado proyecto presupuestos ..."
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "textoPrueba['text'] = textoPrueba['text'].apply(noPuntuacion).apply(lambda x: \" \".join(x))\n",
+    "textoPrueba.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aplicamos stemming"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Función para aplicar stemming al texto\n",
+    "\n",
+    "def stemmiar(text):\n",
+    "\n",
+    "    stemmer = SnowballStemmer('spanish')\n",
+    "\n",
+    "    return ' '.join([stemmer.stem(word) for word in text.split()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>angel merkel ayer berlin tras cumbr telem tic ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>enriqu quem clarian fusion adquisicion actual ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cu ntas vec quer ser propi jef cu ntas vec arr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ministr sanid salvador illa moment rued prens ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>plen congres aprob proyect presupuest general ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text\n",
+       "0  angel merkel ayer berlin tras cumbr telem tic ...\n",
+       "1  enriqu quem clarian fusion adquisicion actual ...\n",
+       "2  cu ntas vec quer ser propi jef cu ntas vec arr...\n",
+       "3  ministr sanid salvador illa moment rued prens ...\n",
+       "4  plen congres aprob proyect presupuest general ..."
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "textoPrueba['text'] = textoPrueba['text'].apply(stemmiar)\n",
+    "textoPrueba.head()"
    ]
   },
   {
