--- a/TopicPredicton.ipynb
+++ b/TopicPredicton.ipynb
@@ -26,14 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import re # expresiones regulares (regex)\n",
     "from nltk.corpus import stopwords\n",
-    "from nltk.stem import SnowballStemmer"
+    "from nltk.stem import SnowballStemmer\n",
+    "import spacy\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from nltk.tokenize import TreebankWordTokenizer"
    ]
   },
   {
@@ -46,14 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10000, 1)\n"
+      "(1000, 1)\n"
      ]
     },
     {
@@ -139,7 +142,7 @@
        "9  La aerolínea Ryanair anunció este viernes que ..."
       ]
      },
-     "execution_count": 101,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,6 +154,7 @@
     "\n",
     "textoPrueba = df[['text']].copy() # Pongo .copy() porque cuando intentas \n",
     "                                  # quitar las stopwords sale un warning.\n",
+    "textoPrueba = textoPrueba.head(1000)\n",
     "\n",
     "print(textoPrueba.shape)\n",
     "textoPrueba.head(10)"
@@ -166,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +248,7 @@
        "4  Pleno Congreso aprobado proyecto Presupuestos ..."
       ]
      },
-     "execution_count": 103,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -336,13 +340,114 @@
        "4  pleno congreso aprobado proyecto presupuestos ..."
       ]
      },
-     "execution_count": 105,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "textoPrueba['text'] = textoPrueba['text'].apply(noPuntuacion).apply(lambda x: \" \".join(x))\n",
+    "textoPrueba.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aplicamos lematización"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Función para lematizar al texto\n",
+    "def lemmatize_text(text):\n",
+    "\n",
+    "    # Cargamos el módulo de español\n",
+    "    nlp = spacy.load(\"es_core_news_sm\")\n",
+    "\n",
+    "    # nlp crea una pipeline que le adhiere metadata que la paquetería spacy usa\n",
+    "    doc = nlp(text)\n",
+    "\n",
+    "    lemmatized_text = \" \".join([token.lemma_ for token in doc])\n",
+    "    \n",
+    "    return lemmatized_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>angelar merkel ayer berlin tras cumbre telem t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>enrique quemado clarián fusión adquisición act...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cu ntar vez querido ser propio jefe cu nta vez...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ministro sanidad salvador illa momento rodar p...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>pleno congreso aprobado proyecto presupuesto g...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text\n",
+       "0  angelar merkel ayer berlin tras cumbre telem t...\n",
+       "1  enrique quemado clarián fusión adquisición act...\n",
+       "2  cu ntar vez querido ser propio jefe cu nta vez...\n",
+       "3  ministro sanidad salvador illa momento rodar p...\n",
+       "4  pleno congreso aprobado proyecto presupuesto g..."
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "textoPrueba['text'] = textoPrueba['text'].apply(lemmatize_text)\n",
     "textoPrueba.head()"
    ]
   },
@@ -440,6 +545,77 @@
    "source": [
     "textoPrueba['text'] = textoPrueba['text'].apply(stemmiar)\n",
     "textoPrueba.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vectorizamos y hacemos n-gramas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>TfidfVectorizer(max_df=0.5, min_df=2, ngram_range=(1, 2),\n",
+       "                tokenizer=&lt;bound method TreebankWordTokenizer.tokenize of &lt;nltk.tokenize.treebank.TreebankWordTokenizer object at 0x000001434674B0A0&gt;&gt;)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">TfidfVectorizer</label><div class=\"sk-toggleable__content\"><pre>TfidfVectorizer(max_df=0.5, min_df=2, ngram_range=(1, 2),\n",
+       "                tokenizer=&lt;bound method TreebankWordTokenizer.tokenize of &lt;nltk.tokenize.treebank.TreebankWordTokenizer object at 0x000001434674B0A0&gt;&gt;)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "TfidfVectorizer(max_df=0.5, min_df=2, ngram_range=(1, 2),\n",
+       "                tokenizer=<bound method TreebankWordTokenizer.tokenize of <nltk.tokenize.treebank.TreebankWordTokenizer object at 0x000001434674B0A0>>)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Creamos una instancia que hará la vectorización TF-IDF\n",
+    "vect = TfidfVectorizer()\n",
+    "\n",
+    "# Tokenizamos como Penn Treebank\n",
+    "tokenizer = TreebankWordTokenizer()\n",
+    "vect.set_params(tokenizer=tokenizer.tokenize)\n",
+    "\n",
+    "# Incluimos 1-grams y 2-grams\n",
+    "vect.set_params(ngram_range=(1, 2))\n",
+    "\n",
+    "# Ignoramos términos que aparecen en más del 50% de los documentos\n",
+    "vect.set_params(max_df=0.5)\n",
+    "\n",
+    "# Solo mantenemos los términos que aparecen en al menos 2 documentos\n",
+    "vect.set_params(min_df=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<1000x40639 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 301393 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Vectorizamos\n",
+    "vect_fit = vect.fit_transform(textoPrueba['text']) \n",
+    "vect_fit"
    ]
   },
   {
