comentario sobre stemming

--- a/TopicPredicton.ipynb
+++ b/TopicPredicton.ipynb
@@ -456,7 +456,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aplicamos stemming"
+    "Aplicamos stemming (Esta madre lo mas probable es que no lo pongamos)"
    ]
   },
   {
