yt api con archivo de google

--- a/YTApi.ipynb
+++ b/YTApi.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,8 @@
     "import re\n",
     "\n",
     "import pandas as pd \n",
-    "from googleapiclient.errors import HttpError\n"
+    "from googleapiclient.errors import HttpError\n",
+    "from Google import Create_Service"
    ]
   },
   {
@@ -57,7 +58,7 @@
     "    playlists =[]\n",
     "    try:\n",
     "        response = service.playlists().list(\n",
-    "            part = 'snippet'\n",
+    "            part = 'snippet',\n",
     "            channelId = channelId,\n",
     "            maxResults = 50\n",
     "        ).execute()\n",
@@ -67,7 +68,7 @@
     "\n",
     "        while nextPageToken:\n",
     "            response = service.playlists().list(\n",
-    "                part = 'snippet'\n",
+    "                part = 'snippet',\n",
     "                channelId = channelId,\n",
     "                maxResults = 50,\n",
     "                pageToken = nextPageToken\n",
@@ -75,8 +76,6 @@
     "\n",
     "            playlists.extend(response.get('items'))\n",
     "            nextPageToken = response.get('nextPageToken')\n",
-    "\n",
-    "\n",
     "\n",
     "    except HttpError as e:\n",
     "        errMsg = json.loads(e.content)\n",
@@ -98,7 +97,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "CLIENT_SECRETS_FILE = 'client_secret.json'\n",
+    "API_NAME = 'youtube'\n",
+    "API_VERSION = 'v3'\n",
+    "SCOPES = ['https://www.googleapis.com/auth/youtube']\n",
+    "\n",
+    "service = Create_Service(CLIENT_SECRETS_FILE, API_NAME, API_VERSION, SCOPES)"
+   ]
   }
  ],
  "metadata": {
