corrimiento y creación de service, actualizando gitignore

--- a/YTApi.ipynb
+++ b/YTApi.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,16 +94,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "client_secret.json-youtube-v3-(['https://www.googleapis.com/auth/youtube.readonly'],)\n",
+      "['https://www.googleapis.com/auth/youtube.readonly']\n",
+      "Please visit this URL to authorize this application: https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=6670118319-vqkm9egmjnkmhdjm29manigl4490vpc3.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A8080%2F&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fyoutube.readonly&state=3sSkwPy585upAZd6lDzt8FpAUZyDjw&access_type=offline\n",
+      "youtube service created successfully\n"
+     ]
+    }
+   ],
    "source": [
     "CLIENT_SECRETS_FILE = 'client_secret.json'\n",
     "API_NAME = 'youtube'\n",
     "API_VERSION = 'v3'\n",
-    "SCOPES = ['https://www.googleapis.com/auth/youtube']\n",
+    "SCOPES = ['https://www.googleapis.com/auth/youtube.readonly']\n",
     "\n",
     "service = Create_Service(CLIENT_SECRETS_FILE, API_NAME, API_VERSION, SCOPES)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El objeto <code>service</code> nos da accesos a todos los recursos de la API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__enter__',\n",
+       " '__eq__',\n",
+       " '__exit__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__setstate__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " '_add_basic_methods',\n",
+       " '_add_nested_resources',\n",
+       " '_add_next_methods',\n",
+       " '_baseUrl',\n",
+       " '_developerKey',\n",
+       " '_dynamic_attrs',\n",
+       " '_http',\n",
+       " '_model',\n",
+       " '_requestBuilder',\n",
+       " '_resourceDesc',\n",
+       " '_rootDesc',\n",
+       " '_schema',\n",
+       " '_set_dynamic_attr',\n",
+       " '_set_service_methods',\n",
+       " 'abuseReports',\n",
+       " 'activities',\n",
+       " 'captions',\n",
+       " 'channelBanners',\n",
+       " 'channelSections',\n",
+       " 'channels',\n",
+       " 'close',\n",
+       " 'commentThreads',\n",
+       " 'comments',\n",
+       " 'i18nLanguages',\n",
+       " 'i18nRegions',\n",
+       " 'liveBroadcasts',\n",
+       " 'liveChatBans',\n",
+       " 'liveChatMessages',\n",
+       " 'liveChatModerators',\n",
+       " 'liveStreams',\n",
+       " 'members',\n",
+       " 'membershipsLevels',\n",
+       " 'new_batch_http_request',\n",
+       " 'playlistItems',\n",
+       " 'playlists',\n",
+       " 'search',\n",
+       " 'subscriptions',\n",
+       " 'superChatEvents',\n",
+       " 'tests',\n",
+       " 'thirdPartyLinks',\n",
+       " 'thumbnails',\n",
+       " 'videoAbuseReportReasons',\n",
+       " 'videoCategories',\n",
+       " 'videos',\n",
+       " 'watermarks',\n",
+       " 'youtube']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(service)"
    ]
   }
  ],
