--- a/YTApi.ipynb
+++ b/YTApi.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,15 +50,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def retrieve_playlists(service, partString, channelId):\n",
+    "def retrieve_playlists(service, channelId):\n",
     "    playlists =[]\n",
     "    try:\n",
     "        response = service.playlists().list(\n",
-    "            part = 'snippet',\n",
+    "            part = 'contentDetails, snippet, status',\n",
     "            channelId = channelId,\n",
     "            maxResults = 50\n",
     "        ).execute()\n",
@@ -68,7 +68,7 @@
     "\n",
     "        while nextPageToken:\n",
     "            response = service.playlists().list(\n",
-    "                part = 'snippet',\n",
+    "                part = 'contentDetails, snippet, status',\n",
     "                channelId = channelId,\n",
     "                maxResults = 50,\n",
     "                pageToken = nextPageToken\n",
@@ -76,6 +76,8 @@
     "\n",
     "            playlists.extend(response.get('items'))\n",
     "            nextPageToken = response.get('nextPageToken')\n",
+    "\n",
+    "        return playlists\n",
     "\n",
     "    except HttpError as e:\n",
     "        errMsg = json.loads(e.content)\n",
@@ -94,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +105,6 @@
      "text": [
       "client_secret.json-youtube-v3-(['https://www.googleapis.com/auth/youtube.readonly'],)\n",
       "['https://www.googleapis.com/auth/youtube.readonly']\n",
-      "Please visit this URL to authorize this application: https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=6670118319-vqkm9egmjnkmhdjm29manigl4490vpc3.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A8080%2F&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fyoutube.readonly&state=3sSkwPy585upAZd6lDzt8FpAUZyDjw&access_type=offline\n",
       "youtube service created successfully\n"
      ]
     }
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -211,13 +212,85 @@
        " 'youtube']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dir(service)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora llamemos a la fución que nos provee de las playlists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "channel_id = 'UCxEgOKuI-n-WOJaNcisHvSg' # ID del canal de el presidente\n",
+    "playlists_items = retrieve_playlists(service, channel_id)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obtenemos la playlist de las conferencias matutinas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'kind': 'youtube#playlist',\n",
+       " 'etag': 'yFdEtWGvpytKuVfVI0pO98jWwEE',\n",
+       " 'id': 'PLRnlRGar-_296KTsVL0R6MEbpwJzD8ppA',\n",
+       " 'snippet': {'publishedAt': '2019-03-08T21:50:49Z',\n",
+       "  'channelId': 'UCxEgOKuI-n-WOJaNcisHvSg',\n",
+       "  'title': 'Conferencias de prensa matutinas',\n",
+       "  'description': 'De lunes a viernes, a las 7:00 horas, mantenemos un diálogo circular con representantes de los medios de comunicación al término de la reunión con Gabinete de Seguridad.',\n",
+       "  'thumbnails': {'default': {'url': 'https://i.ytimg.com/vi/uW-UISq5YLY/default.jpg',\n",
+       "    'width': 120,\n",
+       "    'height': 90},\n",
+       "   'medium': {'url': 'https://i.ytimg.com/vi/uW-UISq5YLY/mqdefault.jpg',\n",
+       "    'width': 320,\n",
+       "    'height': 180},\n",
+       "   'high': {'url': 'https://i.ytimg.com/vi/uW-UISq5YLY/hqdefault.jpg',\n",
+       "    'width': 480,\n",
+       "    'height': 360},\n",
+       "   'standard': {'url': 'https://i.ytimg.com/vi/uW-UISq5YLY/sddefault.jpg',\n",
+       "    'width': 640,\n",
+       "    'height': 480},\n",
+       "   'maxres': {'url': 'https://i.ytimg.com/vi/uW-UISq5YLY/maxresdefault.jpg',\n",
+       "    'width': 1280,\n",
+       "    'height': 720}},\n",
+       "  'channelTitle': 'Andrés Manuel López Obrador',\n",
+       "  'localized': {'title': 'Conferencias de prensa matutinas',\n",
+       "   'description': 'De lunes a viernes, a las 7:00 horas, mantenemos un diálogo circular con representantes de los medios de comunicación al término de la reunión con Gabinete de Seguridad.'}},\n",
+       " 'status': {'privacyStatus': 'public'},\n",
+       " 'contentDetails': {'itemCount': 1101}}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "playlists_items[-1]"
    ]
   }
  ],
