Obteniendo cada elemento en la playlist de la mañanera

--- a/YTApi.ipynb
+++ b/YTApi.ipynb
@@ -87,6 +87,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def retrieve_playlists_items(service, playlistId):\n",
+    "    items =[]\n",
+    "    try:\n",
+    "        response = service.playlistItems().list(\n",
+    "            part = 'contentDetails, snippet, status',\n",
+    "            playlistId = playlistId,\n",
+    "            maxResults = 5\n",
+    "        ).execute()\n",
+    "\n",
+    "        items.extend(response.get('items'))\n",
+    "        nextPageToken = response.get('nextPageToken')\n",
+    "\n",
+    "        while nextPageToken:\n",
+    "            response = service.playlistItems().list(\n",
+    "                part = 'contentDetails, snippet, status',\n",
+    "                playlistId = playlistId,\n",
+    "                maxResults = 5,\n",
+    "                pageToken = nextPageToken\n",
+    "            ).execute()\n",
+    "\n",
+    "            items.extend(response.get('items'))\n",
+    "            nextPageToken = response.get('nextPageToken')\n",
+    "\n",
+    "        return items\n",
+    "\n",
+    "    except HttpError as e:\n",
+    "        errMsg = json.loads(e.content)\n",
+    "        print(\"HTTP Error: \")\n",
+    "        print(errMsg['error']['message'])\n",
+    "        return []"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -231,12 +269,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "channel_id = 'UCxEgOKuI-n-WOJaNcisHvSg' # ID del canal de el presidente\n",
-    "playlists_items = retrieve_playlists(service, channel_id)"
+    "playlists = retrieve_playlists(service, channel_id)"
    ]
   },
   {
@@ -249,48 +287,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'kind': 'youtube#playlist',\n",
-       " 'etag': 'yFdEtWGvpytKuVfVI0pO98jWwEE',\n",
-       " 'id': 'PLRnlRGar-_296KTsVL0R6MEbpwJzD8ppA',\n",
-       " 'snippet': {'publishedAt': '2019-03-08T21:50:49Z',\n",
-       "  'channelId': 'UCxEgOKuI-n-WOJaNcisHvSg',\n",
-       "  'title': 'Conferencias de prensa matutinas',\n",
-       "  'description': 'De lunes a viernes, a las 7:00 horas, mantenemos un diálogo circular con representantes de los medios de comunicación al término de la reunión con Gabinete de Seguridad.',\n",
-       "  'thumbnails': {'default': {'url': 'https://i.ytimg.com/vi/uW-UISq5YLY/default.jpg',\n",
-       "    'width': 120,\n",
-       "    'height': 90},\n",
-       "   'medium': {'url': 'https://i.ytimg.com/vi/uW-UISq5YLY/mqdefault.jpg',\n",
-       "    'width': 320,\n",
-       "    'height': 180},\n",
-       "   'high': {'url': 'https://i.ytimg.com/vi/uW-UISq5YLY/hqdefault.jpg',\n",
-       "    'width': 480,\n",
-       "    'height': 360},\n",
-       "   'standard': {'url': 'https://i.ytimg.com/vi/uW-UISq5YLY/sddefault.jpg',\n",
-       "    'width': 640,\n",
-       "    'height': 480},\n",
-       "   'maxres': {'url': 'https://i.ytimg.com/vi/uW-UISq5YLY/maxresdefault.jpg',\n",
-       "    'width': 1280,\n",
-       "    'height': 720}},\n",
-       "  'channelTitle': 'Andrés Manuel López Obrador',\n",
-       "  'localized': {'title': 'Conferencias de prensa matutinas',\n",
-       "   'description': 'De lunes a viernes, a las 7:00 horas, mantenemos un diálogo circular con representantes de los medios de comunicación al término de la reunión con Gabinete de Seguridad.'}},\n",
-       " 'status': {'privacyStatus': 'public'},\n",
-       " 'contentDetails': {'itemCount': 1101}}"
+       "{'kind': 'youtube#playlist', 'etag': 'yFdEtWGvpytKuVfVI0pO98jWwEE', 'id': 'PLRnlRGar-_296KTsVL0R6MEbpwJzD8ppA', 'snippet': {'publishedAt': '2019-03-08T21:50:49Z', 'channelId': 'UCxEgOKuI-n-WOJaNcisHvSg', 'title': 'Conferencias de prensa matutinas', 'description': 'De lunes a viernes, a las 7:00 horas, mantenemos un diálogo circular con representantes de los medios de comunicación al término de la reunión con Gabinete de Seguridad.', 'thumbnails': {'default': {'url': 'https://i.ytimg.com/vi/uW-UISq5YLY/default.jpg', 'width': 120, 'height': 90}, 'medium': {'url': 'https://i.ytimg.com/vi/uW-UISq5YLY/mqdefault.jpg', 'width': 320, 'height': 180}, 'high': {'url': 'https://i.ytimg.com/vi/uW-UISq5YLY/hqdefault.jpg', 'width': 480, 'height': 360}, 'standard': {'url': 'https://i.ytimg.com/vi/uW-UISq5YLY/sddefault.jpg', 'width': 640, 'height': 480}, 'maxres': {'url': 'https://i.ytimg.com/vi/uW-UISq5YLY/maxresdefault.jpg', 'width': 1280, 'height': 720}}, 'channelTitle': 'Andrés Manuel López Obrador', 'localized': {'title': 'Conferencias de prensa matutinas', 'description': 'De lunes a viernes, a las 7:00 horas, mantenemos un diálogo circular con representantes de los medios de comunicación al término de la reunión con Gabinete de Seguridad.'}}, 'status': {'privacyStatus': 'public'}, 'contentDetails': {'itemCount': 1101}}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "playlists_items[-1]"
+    "playlists[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "playlistId = 'PLRnlRGar-_296KTsVL0R6MEbpwJzD8ppA'\n",
+    "playlists_items = retrieve_playlists_items(service, playlistId)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'kind': 'youtube#playlistItem', 'etag': '8WJEXuec_liHMLQ3MWFIqoEQmWs', 'id': 'UExSbmxSR2FyLV8yOTZLVHNWTDBSNk1FYnB3SnpEOHBwQS4zRDNFM0Q1MzY2NTYwMTJC', 'snippet': {'publishedAt': '2023-04-24T12:44:41Z', 'channelId': 'UCxEgOKuI-n-WOJaNcisHvSg', 'title': 'Conferencia de prensa matutina desde Palacio Nacional. Lunes 24 de abril 2023 | Presidente AMLO', 'description': 'Conferencia de prensa matutina, desde Palacio Nacional. Lunes 24 de abril 2023 | Presidente AMLO.\\n\\n0:00 Inicio de transmisión\\n15:15 Comienza la conferencia de prensa del presidente Andrés Manuel López Obrador\\n16:48 Comparativo de marcas y precios de combustibles\\n25:07 Comparativo de marcas y precios de productos de primera necesidad\\n28:30 Reporte de construcción del Tren Maya en tramo Escárcega-Calkiní\\n32:57 Informe del consorcio Carso FCC en el Tramo 2 del Tren Maya\\n34:14 Salvamento arqueológico en el proyecto del Tren Maya\\n40:26 Informe de la Semarnat en el Tramo 2 del Tren Maya\\n42:33 Informe de la Secretaría del Bienestar en el Tramo 2 del Tren Maya\\n42:51 Informe de los Programas para el Bienestar\\n1:10:05 Sesión de preguntas y respuestas\\n\\nSigue las actividades del presidente de México:\\n\\nSitio web:\\nhttp://presidente.gob.mx\\n\\nYouTube:\\nhttps://www.youtube.com/lopezobrador\\n\\nFacebook:\\nhttps://facebook.com/lopezobrador.org.mx\\n\\nTwitter:\\nhttps://twitter.com/lopezobrador_\\n\\nInstagram:\\nhttps://www.instagram.com/lopezobrador/\\n\\nTelegram: \\nhttps://t.me/PresidenteAMLO\\n\\nSpotify:\\nhttps://spoti.fi/3QocikN', 'thumbnails': {'default': {'url': 'https://i.ytimg.com/vi/uW-UISq5YLY/default.jpg', 'width': 120, 'height': 90}, 'medium': {'url': 'https://i.ytimg.com/vi/uW-UISq5YLY/mqdefault.jpg', 'width': 320, 'height': 180}, 'high': {'url': 'https://i.ytimg.com/vi/uW-UISq5YLY/hqdefault.jpg', 'width': 480, 'height': 360}, 'standard': {'url': 'https://i.ytimg.com/vi/uW-UISq5YLY/sddefault.jpg', 'width': 640, 'height': 480}, 'maxres': {'url': 'https://i.ytimg.com/vi/uW-UISq5YLY/maxresdefault.jpg', 'width': 1280, 'height': 720}}, 'channelTitle': 'Andrés Manuel López Obrador', 'playlistId': 'PLRnlRGar-_296KTsVL0R6MEbpwJzD8ppA', 'position': 0, 'resourceId': {'kind': 'youtube#video', 'videoId': 'uW-UISq5YLY'}, 'videoOwnerChannelTitle': 'Andrés Manuel López Obrador', 'videoOwnerChannelId': 'UCxEgOKuI-n-WOJaNcisHvSg'}, 'contentDetails': {'videoId': 'uW-UISq5YLY', 'videoPublishedAt': '2023-04-24T15:21:52Z'}, 'status': {'privacyStatus': 'public'}}"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "playlists_items[0]"
    ]
   }
  ],
