--- a/YTApi.ipynb
+++ b/YTApi.ipynb
@@ -356,8 +356,118 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Una primera limpieza"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Conferencia de prensa matutina, desde Palacio Nacional. Lunes 24 de abril 2023 | Presidente AMLO.\\n\\n0:00 Inicio de transmisión\\n15:15 Comienza la conferencia de prensa del presidente Andrés Manuel López Obrador\\n16:48 Comparativo de marcas y precios de combustibles\\n25:07 Comparativo de marcas y precios de productos de primera necesidad\\n28:30 Reporte de construcción del Tren Maya en tramo Escárcega-Calkiní\\n32:57 Informe del consorcio Carso FCC en el Tramo 2 del Tren Maya\\n34:14 Salvamento arqueológico en el proyecto del Tren Maya\\n40:26 Informe de la Semarnat en el Tramo 2 del Tren Maya\\n42:33 Informe de la Secretaría del Bienestar en el Tramo 2 del Tren Maya\\n42:51 Informe de los Programas para el Bienestar\\n1:10:05 Sesión de preguntas y respuestas\\n\\nSigue las actividades del presidente de México:\\n\\nSitio web:\\nhttp://presidente.gob.mx\\n\\nYouTube:\\nhttps://www.youtube.com/lopezobrador\\n\\nFacebook:\\nhttps://facebook.com/lopezobrador.org.mx\\n\\nTwitter:\\nhttps://twitter.com/lopezobrador_\\n\\nInstagram:\\nhttps://www.instagram.com/lopezobrador/\\n\\nTelegram: \\nhttps://t.me/PresidenteAMLO\\n\\nSpotify:\\nhttps://spoti.fi/3QocikN'"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['description'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def replace_newlines(string):\n",
+    "    pattern = r'\\n'\n",
+    "    replace_with = ' '\n",
+    "    return re.sub(pattern, replace_with, string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def replace_minutes(string):\n",
+    "    pattern = r'[0-9]?[0-9]:[0-9][0-9]'\n",
+    "    replace_with = ''\n",
+    "    return re.sub(pattern, replace_with, string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_links(string):\n",
+    "    pattern = r\"(?i)\\b((?:https?://|www\\d{0,3}[.]|[a-z0-9.\\-]+[.][a-z]{2,4}/)(?:[^\\s()<>]+|\\(([^\\s()<>]+|(\\([^\\s()<>]+\\)))*\\))+(?:\\(([^\\s()<>]+|(\\([^\\s()<>]+\\)))*\\)|[^\\s`!()\\[\\]{};:'\\\".,<>?«»“”‘’]))\"\n",
+    "    replace_with = ''\n",
+    "    return re.sub(pattern, replace_with, string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_extra_words(string):\n",
+    "    pattern = r'Sigue las actividades del presidente de México:  Sitio web:   YouTube:   Facebook:   Twitter:   Instagram:   Telegram:    Spotify: '\n",
+    "    replace_with = ''\n",
+    "    return re.sub(pattern, replace_with, string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['description'] = df['description'].apply(replace_newlines).apply(replace_minutes).apply(remove_links).apply(remove_extra_words)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Conferencia de prensa matutina, desde Palacio Nacional. Martes 07 de febrero 2023 | Presidente AMLO.   Inicio de transmisión  Comienza la conferencia de prensa del presidente Andrés Manuel López Obrador  Informe de seguridad  Informe Cero Impunidad 1: Informe sobre regularización de vehículos de procedencia extranjera 1: Informe sobre preliberaciones y amnistías 1: Informe del Tianguis del Bienestar 1: Informe sobre las capacidades del Aeropuerto Internacional Felipe Ángeles 1: Informe caso Genaro García Luna 1: Sesión de preguntas y respuestas  Informamos sobre las capacidades del Aeropuerto Internacional Felipe Ángeles en cuanto al transporte de carga y pasajeros. Es el más moderno, equipado y seguro del sistema aeroportuario del país.   El AIFA puede recibir hasta 443 mil toneladas al año, a diferencia del AICM, que en 2022 registró la llegada de un promedio de 250 mil toneladas en aviones dedicados a la carga internacional.  De conformidad con su programa maestro, el Aeropuerto Internacional Felipe Ángeles tendrá en el largo plazo la posibilidad de ampliar la infraestructura a fin de atender hasta 3 millones de toneladas de mercancías al año.  Trabajamos en mejorar accesos para las y los usuarios. Próximamente se inaugurará una ruta libre de peaje en el Estado de México rumbo al Aeropuerto Internacional Felipe Ángeles.\\xa0  Esta carretera adicional partirá del Puente de Fierro, en Ecatepec, donde se encuentra la bifurcación de la autopista México-Pachuca con el Circuito Exterior Mexiquense.\\xa0Gracias a este proyecto se llegará en un promedio de 10 minutos a las instalaciones del aeropuerto.\\xa0  Simultáneamente, continúan los 19 puntos entre el Estado de México y la Ciudad de México para salir y llegar al AIFA en transporte público con precios desde 70 hasta 150 pesos. Además, está la línea 1 del Mexibús como otra alternativa.\\xa0\\xa0  Como todos los proyectos estratégicos que impulsamos, el AIFA tiene efecto multiplicador: orientará el desarrollo del Valle de México hacia Hidalgo, donde hay viabilidad de suelo y agua; ya hay empresas que quieren instalarse en esa entidad, lo que generará más empleos.  La entrada en operaciones de la nueva aerolínea del Estado, Mexicana de Aviación, contribuirá a reducir los costos del pasaje.\\xa0  En el reporte quincenal de seguridad destacó el resultado positivo de las preliberaciones y amnistías; se dio acceso a la justicia a más de 4 mil personas.  Infraestructura del AIFA tiene capacidad para recibir más de 400 mil toneladas de carga:    Presidente inaugurará ruta libre hacia el AIFA en el Estado de México:   Más de 4 mil personas acceden a preliberaciones y amnistías:   '"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['description'][50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +598,7 @@
        "[1085 rows x 3 columns]"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
