--- a/YTApi.ipynb
+++ b/YTApi.ipynb
@@ -364,9 +364,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Los datos que llegan de la API están contaminados con datos como minutos de YouTube en formato <code>00:00</code>, links de youtube y palabras específicas como redes sociales y frases que no aportan nada.\n",
+    "Para mejor ejemplo, tomemos un elemento."
+   ]
   },
   {
    "cell_type": "code",
@@ -389,6 +393,22 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Declararemos una serie de funciones que utilizarán regex para limpiar esta basura."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<code>replace_newlines(string)</code> es una función que elimina los patrones de salto de línea (<code>\\n</code>) y coloca un espacio en blanco"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 158,
    "metadata": {},
@@ -398,6 +418,14 @@
     "    pattern = r'\\n'\n",
     "    replace_with = ' '\n",
     "    return re.sub(pattern, replace_with, string)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<code>replace_minutes(string)</code> es una función que elimina los patrones de formato de minuto (<code>00:00</code>)"
    ]
   },
   {
@@ -413,6 +441,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<code>replace_minutes(string)</code> es una función que elimina los patrones de formato de minuto (<code>00:00</code>)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 173,
    "metadata": {},
@@ -422,6 +457,14 @@
     "    pattern = r\"(?i)\\b((?:https?://|www\\d{0,3}[.]|[a-z0-9.\\-]+[.][a-z]{2,4}/)(?:[^\\s()<>]+|\\(([^\\s()<>]+|(\\([^\\s()<>]+\\)))*\\))+(?:\\(([^\\s()<>]+|(\\([^\\s()<>]+\\)))*\\)|[^\\s`!()\\[\\]{};:'\\\".,<>?«»“”‘’]))\"\n",
     "    replace_with = ''\n",
     "    return re.sub(pattern, replace_with, string)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<code>remove_extra_words(string)</code> es una función que elimina los patrones de palabras especícas, pues estas sólo pueden afectar el entrenamiento"
    ]
   },
   {
@@ -437,6 +480,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aplicamos las funciones y vemos los resultados"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 185,
    "metadata": {},
@@ -447,22 +498,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Conferencia de prensa matutina, desde Palacio Nacional. Martes 07 de febrero 2023 | Presidente AMLO.   Inicio de transmisión  Comienza la conferencia de prensa del presidente Andrés Manuel López Obrador  Informe de seguridad  Informe Cero Impunidad 1: Informe sobre regularización de vehículos de procedencia extranjera 1: Informe sobre preliberaciones y amnistías 1: Informe del Tianguis del Bienestar 1: Informe sobre las capacidades del Aeropuerto Internacional Felipe Ángeles 1: Informe caso Genaro García Luna 1: Sesión de preguntas y respuestas  Informamos sobre las capacidades del Aeropuerto Internacional Felipe Ángeles en cuanto al transporte de carga y pasajeros. Es el más moderno, equipado y seguro del sistema aeroportuario del país.   El AIFA puede recibir hasta 443 mil toneladas al año, a diferencia del AICM, que en 2022 registró la llegada de un promedio de 250 mil toneladas en aviones dedicados a la carga internacional.  De conformidad con su programa maestro, el Aeropuerto Internacional Felipe Ángeles tendrá en el largo plazo la posibilidad de ampliar la infraestructura a fin de atender hasta 3 millones de toneladas de mercancías al año.  Trabajamos en mejorar accesos para las y los usuarios. Próximamente se inaugurará una ruta libre de peaje en el Estado de México rumbo al Aeropuerto Internacional Felipe Ángeles.\\xa0  Esta carretera adicional partirá del Puente de Fierro, en Ecatepec, donde se encuentra la bifurcación de la autopista México-Pachuca con el Circuito Exterior Mexiquense.\\xa0Gracias a este proyecto se llegará en un promedio de 10 minutos a las instalaciones del aeropuerto.\\xa0  Simultáneamente, continúan los 19 puntos entre el Estado de México y la Ciudad de México para salir y llegar al AIFA en transporte público con precios desde 70 hasta 150 pesos. Además, está la línea 1 del Mexibús como otra alternativa.\\xa0\\xa0  Como todos los proyectos estratégicos que impulsamos, el AIFA tiene efecto multiplicador: orientará el desarrollo del Valle de México hacia Hidalgo, donde hay viabilidad de suelo y agua; ya hay empresas que quieren instalarse en esa entidad, lo que generará más empleos.  La entrada en operaciones de la nueva aerolínea del Estado, Mexicana de Aviación, contribuirá a reducir los costos del pasaje.\\xa0  En el reporte quincenal de seguridad destacó el resultado positivo de las preliberaciones y amnistías; se dio acceso a la justicia a más de 4 mil personas.  Infraestructura del AIFA tiene capacidad para recibir más de 400 mil toneladas de carga:    Presidente inaugurará ruta libre hacia el AIFA en el Estado de México:   Más de 4 mil personas acceden a preliberaciones y amnistías:   '"
+       "'Conferencia de prensa matutina, desde Palacio Nacional. Lunes 24 de abril 2023 | Presidente AMLO.   Inicio de transmisión  Comienza la conferencia de prensa del presidente Andrés Manuel López Obrador  Comparativo de marcas y precios de combustibles  Comparativo de marcas y precios de productos de primera necesidad  Reporte de construcción del Tren Maya en tramo Escárcega-Calkiní  Informe del consorcio Carso FCC en el Tramo 2 del Tren Maya  Salvamento arqueológico en el proyecto del Tren Maya  Informe de la Semarnat en el Tramo 2 del Tren Maya  Informe de la Secretaría del Bienestar en el Tramo 2 del Tren Maya  Informe de los Programas para el Bienestar 1: Sesión de preguntas y respuestas  '"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['description'][50]"
+    "df['description'][0]"
    ]
   },
   {
